--- a/proj-pokemon/html/index.html
+++ b/proj-pokemon/html/index.html
@@ -24,9 +24,11 @@
         <img src="https://th.bing.com/th/id/R.043c8f0d644b92e8f44fce4fa3c74ba8?rik=eiYoegwDnrvYSQ&riu=http%3a%2f%2fvignette4.wikia.nocookie.net%2fpokemon-revolution%2fimages%2fd%2fd1%2fMega_charizard_by_yonaka_pinku-d6l1hrb.png%2frevision%2flatest%3fcb%3d20150712082348&ehk=ps5IUigDsZGlf0cwdoDj2MDgoS7b7tJc8ebFDl6OFQk%3d&risl=&pid=ImgRaw&r=0" alt="">
     </main>
 
+
     <footer>
         <p>@2025 todos os direitos reservados</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
