--- a/proj-pokemon/html/apresentacao.html
+++ b/proj-pokemon/html/apresentacao.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="apresentacao.css">
     <title>Document</title>
 </head>
 <body>
-    <img src="" class="imagem" alt="pokemon 1">
+
+    <header>
+        <h1>Bem vindo ao PokeWorld</h1>
+    </header>
+    
 </body>
 </html>
