--- a/proj-pokemon/html/apresentacao.html
+++ b/proj-pokemon/html/apresentacao.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="apresentacao.css">
+    <link rel="stylesheet" href="/proj-pokemon/css/apresentacao.css">
+    <link rel="icon" href="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png">
     <title>Document</title>
 </head>
 <body>
+    
+    <main>
+        <h1>Bem vindo ao</h1>
+        <img src="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png" alt="">
+        <a>
+            <button href="/proj-pokemon/html/tela inicial.html"> START</button>
+        </a>
+    </main>
 
-    <header>
-        <h1>Bem vindo ao PokeWorld</h1>
-    </header>
+
     
 </body>
 </html>
