--- a/proj-pokemon/html/apresentacao.html
+++ b/proj-pokemon/html/apresentacao.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/proj-pokemon/css/apresentacao.css">
     <link rel="icon" href="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
     
     <main>
-        <h1>Bem vindo ao</h1>
-        <img src="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png" alt="">
-        <a>
-            <button href="/proj-pokemon/html/tela inicial.html"> START</button>
-        </a>
+        <img src="/proj-pokemon/imagens/BEM VINDO-FINAL.png" alt="texto 1">
     </main>
+
+    <div class="container">
+        <a href="/proj-pokemon/html/tela inicial.html">
+            <button>START</button>
+        </a>
+        <img src="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png" alt="texto 2">
+    </div>
 
 
     
