--- a/proj-pokemon/html/tela inicial.html
+++ b/proj-pokemon/html/tela inicial.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/proj-pokemon/css/tela_inicial.css">
     <title>Tela Inicial</title>
 </head>
 <body>
