--- a/proj-pokemon/html/tela inicial.html
+++ b/proj-pokemon/html/tela inicial.html
@@ -24,8 +24,8 @@
         <section id="lista_pokemons" class="grid-list"></section>
 
             <div class="botao_paginacao">
-                <button id="botao_anterior">página anterior</button>
-                <button id="botao_posterior">próxima página</button>
+                <button id="botao_anterior">pokemón anterior</button>
+                <button id="botao_posterior">próxima pokemón</button>
             </div>
     </main>
 
