--- a/proj-pokemon/html/tela inicial.html
+++ b/proj-pokemon/html/tela inicial.html
@@ -6,6 +6,8 @@
     <link rel="icon" href="/proj-pokemon/imagens/LOGO ALTERADA SEM FUNDO.png">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/proj-pokemon/css/tela_inicial.css">
+    <script defer src="/proj-pokemon/js/tela_inicial.js"></script>
+
     <title>Tela Inicial</title>
 </head>
 <body>
@@ -26,6 +28,8 @@
             <div class="botao_paginacao">
                 <button id="botao_anterior">pokemón anterior</button>
                 <button id="botao_posterior">próxima pokemón</button>
+                <button id="botao_voltar_pagina" href="/proj-pokemon/html/apresentacao.html">voltar página</button>
+    
             </div>
     </main>
 
@@ -37,7 +41,11 @@
         </div>
     </div>
 
-    <script src="/proj-pokemon/js/tela_inicial.js"></script>
+
+    <!--SESSÃO DE TESTEs-->
+    <div class="buttons">
+        <button class="button btn-prev"></button>
+    </div>
     
 </body>
 </html>
