--- a/proj-pokemon/html/tela inicial.html
+++ b/proj-pokemon/html/tela inicial.html
@@ -43,9 +43,18 @@
 
 
     <!--SESSÃO DE TESTEs-->
-    <div class="buttons">
-        <button class="button btn-prev"></button>
-    </div>
+    <h1 class="Dados_Pokemon">
+        <span class="Numero_Pokemon"6></span>
+        <span class="Nome_Pokemon">charizard</span>
+    </h1>
+    <form class="Form_Pokemon">
+        <input 
+            type="pesquisar"
+            class="input_pesquisa"
+            placeholder="name or number"
+            required
+            />
+    </form>
     
 </body>
 </html>
