--- a/proj-pokemon/html/tela inicial.html
+++ b/proj-pokemon/html/tela inicial.html
@@ -43,7 +43,7 @@
         <img 
             src="https://img.pokemondb.net/artwork/large/pikachu.jpg" 
             class="Imagem_Pokemon"
-            alt="Imagem do Pokémon"
+            alt="Pokémon"
         >
     </main>
 
