Fix button labels in tela inicial.html

--- a/proj-pokemon/html/tela inicial.html
+++ b/proj-pokemon/html/tela inicial.html
@@ -35,11 +35,12 @@
         <div id="mensagem_erro" class="message hidden">Erro ao carregar Pokémons.</div>
         <div id="mensagem_vazio" class="message hidden">Nenhum resultado encontrado.</div>
 
+        <!--aqui é a estrutura onde os pokémons vão ser exibidos após o JS carregar eles-->
         <section id="lista_pokemon" class="grid"></section>
-
+        <!--a classe grid é linkada no JS para carregar os pokemons e cada um com seu card-->
         <div class="buttons">
-            <button type="button" id="botao_anterior" class="Botao_Anterior">&lt; Página Anterior</button>
-            <button type="button" id="botao_posterior" class="Botao_Posterior">Próxima Página &gt;</button>
+            <button type="button" id="botao_anterior" class="Botao_Anterior">Página Anterior</button>
+            <button type="button" id="botao_posterior" class="Botao_Posterior">Próxima Página</button>
         </div>
     </main>
 
